modified home page and nav bar

--- a/accommodation-old.html
+++ b/accommodation-old.html
@@ -256,7 +256,7 @@
 	<!--================End Accommodation Area =================-->
 
 	<!--================ start footer Area  =================-->
-	<footer class="footer-area  pad_btm_50" height="auto">
+	<footer class="footer-area  pad_btm_50 footer-font" height="auto">
 		<div class="container">
 			<!--<div class="row" style="text-align: center; margin:auto;">
 				<div class="col-lg-1 col-md-2 col-sm-2"></div>
