--- a/contact.html
+++ b/contact.html
@@ -39,73 +39,75 @@
 
 <body>
 
-<!--================Header Menu Area =================-->
-	<header class="header_area">
-		<div class="main_menu">
-			<nav class="navbar navbar-expand-lg navbar-light">
-				<div class="container box_1620">
-					<!-- Brand and toggle get grouped for better mobile display -->
-					
-					<a class="navbar-brand logo_h" href="http://www.vce.ac.in"><img src="img/logo.png" alt=""></a>
-					<button class="navbar-toggler" type="button" data-toggle="collapse"
-						data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-						aria-expanded="false" aria-label="Toggle navigation">
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</button>
-					<!-- Collect the nav links, forms, and other content for toggling -->
-					<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
-						<ul class="nav navbar-nav menu_nav">
-							<li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-							<!-- <li class="nav-item"><a class="nav-link" href="about-us.html">About</a></li> -->
-							<li class="nav-item submenu dropdown">
-								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button"
-									aria-haspopup="true" aria-expanded="false">About</a>
-								<ul class="dropdown-menu">
-									<li class="nav-item"><a class="nav-link" href="about-us.html">College</a></li>
-									<li class="nav-item"><a class="nav-link" href="details.html">Event</a></li>
-								</ul>
-							</li>
-							<!-- <li class="nav-item"><a class="nav-link" href="speakers.html">Speakers</a></li> -->
-							<li class="nav-item"><a class="nav-link" href="./Callforpapers.html">Call for papers</a></li>
-							<li class="nav-item"><a class="nav-link" href="importantdates.html">Important Dates &
-									Venue</a></li>
-							<li class="nav-item"><a class="nav-link" href="committees.html">Committees </a></li>
-							<li class="nav-item"><a class="nav-link" href="accommodation.html">Accommodation</a></li>
-							<li class="nav-item"><a class="nav-link" href="./schedule.html">Schedule</a></li>
+    <!--================Header Menu Area =================-->
+    <header class="header_area">
+        <div class="main_menu">
+            <nav class="navbar navbar-expand-lg navbar-light">
+                <div class="container box_1620">
+                    <!-- Brand and toggle get grouped for better mobile display -->
 
-							<!-- <li class="nav-item"><a class="nav-link" href="./register.html">Register</a></li> -->
-							<!--<li class="nav-item submenu dropdown">
-								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button"
-									aria-haspopup="true" aria-expanded="false">Register</a>
-								<ul class="dropdown-menu">
-									<li class="nav-item"><a class="nav-link" href="Callforpapers.html">Papers</a></li>
-									<li class="nav-item"><a class="nav-link" href="register.html">Register</a></li>
-								</ul>
-                            </li>-->
+                    <a class="navbar-brand logo_h" href="http://www.vce.ac.in"><img src="img/logo.png" alt=""></a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse"
+                        data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <!-- Collect the nav links, forms, and other content for toggling -->
+                    <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
+                        <ul class="nav navbar-nav menu_nav">
+                            <li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
+                            <!-- <li class="nav-item"><a class="nav-link" href="about-us.html">About</a></li> -->
+                            <!--<li class="nav-item submenu dropdown">
+                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button"
+                                aria-haspopup="true" aria-expanded="false">About</a>
+                            <ul class="dropdown-menu">
+                                <li class="nav-item"><a class="nav-link" href="about-us.html">College</a></li>
+                                <li class="nav-item"><a class="nav-link" href="details.html">Event</a></li>
+                            </ul>
+                        </li>-->
+                            <li class="nav-item"><a class="nav-link" href="about-us.html">About Us</a></li>
+                            <!-- <li class="nav-item"><a class="nav-link" href="speakers.html">Speakers</a></li> -->
+                            <li class="nav-item"><a class="nav-link" href="./Callforpapers.html">Call for papers</a>
+                            </li>
+                            <li class="nav-item"><a class="nav-link" href="importantdates.html">Important Dates</a></li>
+                            <li class="nav-item"><a class="nav-link" href="committees.html">Committees </a></li>
+                            <li class="nav-item"><a class="nav-link" href="accommodation.html">Accommodation</a></li>
+                            <li class="nav-item"><a class="nav-link" href="./schedule.html">Schedule</a></li>
+
+                            <!-- <li class="nav-item"><a class="nav-link" href="./register.html">Register</a></li> -->
+                            <!--<li class="nav-item submenu dropdown">
+                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button"
+                                aria-haspopup="true" aria-expanded="false">Register</a>
+                            <ul class="dropdown-menu">
+                                <li class="nav-item"><a class="nav-link" href="Callforpapers.html">Papers</a></li>
+                                <li class="nav-item"><a class="nav-link" href="register.html">Register</a></li>
+                            </ul>
+                        </li>-->
                             <li class="nav-item"><a class="nav-link" href="./speakers.html">Speakers</a></li>
-							<li class="nav-item"><a class="nav-link" href="./register.html">Register</a></li>
-							<li class="nav-item"><a class="nav-link" href="./contact.html">Contact Us</a></li>
+                            <li class="nav-item"><a class="nav-link" href="./register.html">Register</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#">Travel</a></li>
+                            <li class="nav-item"><a class="nav-link" href="./contact.html">Contact Us</a></li>
 
 
-							<!-- <li class="nav-item submenu dropdown">
-								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About</a>
-								<ul class="dropdown-menu">
-									<li class="nav-item"><a class="nav-link" href="about-us.html">College</a>
-									<li class="nav-item"><a class="nav-link" href="details.html">Event</a>
-								</ul>
-							</li> -->
-						</ul>
-						<!-- <ul class="nav navbar-nav navbar-right">
-							<li class="nav-item"><a href="./register.html" class="tickets_btn">Register</a></li>
-						</ul> -->
-					</div>
-				</div>
-			</nav>
-		</div>
-	</header>
-	<!--================Header Menu Area =================-->
+                            <!-- <li class="nav-item submenu dropdown">
+                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About</a>
+                            <ul class="dropdown-menu">
+                                <li class="nav-item"><a class="nav-link" href="about-us.html">College</a>
+                                <li class="nav-item"><a class="nav-link" href="details.html">Event</a>
+                            </ul>
+                        </li> -->
+                        </ul>
+                        <!-- <ul class="nav navbar-nav navbar-right">
+                        <li class="nav-item"><a href="./register.html" class="tickets_btn">Register</a></li>
+                    </ul> -->
+                    </div>
+                </div>
+            </nav>
+        </div>
+    </header>
+    <!--================Header Menu Area =================-->
 
     <!--================Home Banner Area =================-->
     <section class="banner_area">
@@ -153,24 +155,24 @@
                 </div>
             </div>
 
-                    <!--================Start Event Map Area =================-->
-                    <section class="home_map_area iframe-container">
-                        <!-- <div id="mapBox2" class="mapBox2" data-lat="17.3805282" data-lon="78.3826143" data-zoom="13"
+            <!--================Start Event Map Area =================-->
+            <section class="home_map_area iframe-container">
+                <!-- <div id="mapBox2" class="mapBox2" data-lat="17.3805282" data-lon="78.3826143" data-zoom="13"
                     data-info="Vasavi College of Engineering, Hyderabad, Telangana, India" data-mlat="17.3805282"
                     data-mlon="78.3826143">
                 </div> -->
-                        <iframe id="mapIframe" onload=""
-                            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15230.603210403495!2d78.3826143!3d17.3805282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x5c30ca8d2ffb8734!2sVasavi%20College%20of%20Engineering!5e0!3m2!1sen!2sin!4v1574527933482!5m2!1sen!2sin"
-                            allowfullscreen=""></iframe>
-                    </section><br>
-                    <!--================End Event Map Area =================-->
+                <iframe id="mapIframe" onload=""
+                    src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15230.603210403495!2d78.3826143!3d17.3805282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x5c30ca8d2ffb8734!2sVasavi%20College%20of%20Engineering!5e0!3m2!1sen!2sin!4v1574527933482!5m2!1sen!2sin"
+                    allowfullscreen=""></iframe>
+            </section><br>
+            <!--================End Event Map Area =================-->
     </section>
     <!--================Contact Area =================-->
 
     <!--================ start footer Area  =================-->
-    <footer class="footer-area  pad_btm_50" height="auto">
-		<div class="container">
-			<!--<div class="row" style="text-align: center; margin:auto;">
+    <footer class="footer-area  pad_btm_50 footer-font" height="auto">
+        <div class="container">
+            <!--<div class="row" style="text-align: center; margin:auto;">
 				<div class="col-lg-1 col-md-2 col-sm-2"></div>
 				<div class="col-lg-3  col-md-6 col-sm-6">
 					<div class="single-footer-widget tp_widgets">
@@ -219,18 +221,18 @@
 				</div>
 				<div class="col-lg-1"></div>
 			</div>-->
-			<div class="footer-area">
-				<p style="text-align: center; padding-top:45px;" >
-					Organized by, Vasavi College of Engineering (Autonomous), Hyderabad. Copyright &copy;
-					<script>document.write(new Date().getFullYear());</script>.&nbsp; &nbsp;
-					<a href="http://www.vce.ac.in/"><i class="fa fa-dribbble"></i></a>
-				</p>
-				<!--<div class="footer-social">
+            <div class="footer-area">
+                <p style="text-align: center; padding-top:45px;">
+                    Organized by, Vasavi College of Engineering (Autonomous), Hyderabad. Copyright &copy;
+                    <script>document.write(new Date().getFullYear());</script>.&nbsp; &nbsp;
+                    <a href="http://www.vce.ac.in/"><i class="fa fa-dribbble"></i></a>
+                </p>
+                <!--<div class="footer-social">
 					<a href="http://www.vce.ac.in/"><i class="fa fa-dribbble"></i></a>
 				</div>-->
-			</div>
-		</div>
-	</footer>
+            </div>
+        </div>
+    </footer>
     <!--================ End footer Area  =================-->
 
     <!--================Contact Success and Error message Area =================-->
