--- a/Callforpapers.html
+++ b/Callforpapers.html
@@ -41,36 +41,36 @@
 
     <!--================Header Menu Area =================-->
     <header class="header_area">
-        <div class="main_menu">
-            <nav class="navbar navbar-expand-lg navbar-light">
-                <div class="container box_1620">
-                    <!-- Brand and toggle get grouped for better mobile display -->
+		<div class="main_menu">
+			<nav class="navbar navbar-expand-lg navbar-light">
+				<div class="container box_1620">
+					<!-- Brand and toggle get grouped for better mobile display -->
 
-                    <a class="navbar-brand logo_h" href="http://www.vce.ac.in"><img src="img/logo.png" alt=""></a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse"
-                        data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <!-- Collect the nav links, forms, and other content for toggling -->
-                    <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
+					<a class="navbar-brand logo_h" href="http://www.vce.ac.in"><img src="img/logo.png" alt=""></a>
+					<button class="navbar-toggler" type="button" data-toggle="collapse"
+						data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+						aria-expanded="false" aria-label="Toggle navigation">
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					<!-- Collect the nav links, forms, and other content for toggling -->
+					<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
 						<ul class="nav navbar-nav menu_nav">
-							<li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+							<li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
 							<!-- <li class="nav-item"><a class="nav-link" href="about-us.html">About</a></li> -->
-							<li class="nav-item submenu dropdown">
+							<!--<li class="nav-item submenu dropdown">
 								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button"
 									aria-haspopup="true" aria-expanded="false">About</a>
 								<ul class="dropdown-menu">
 									<li class="nav-item"><a class="nav-link" href="about-us.html">College</a></li>
 									<li class="nav-item"><a class="nav-link" href="details.html">Event</a></li>
 								</ul>
-							</li>
+							</li>-->
+							<li class="nav-item"><a class="nav-link" href="about-us.html">About Us</a></li>
 							<!-- <li class="nav-item"><a class="nav-link" href="speakers.html">Speakers</a></li> -->
 							<li class="nav-item"><a class="nav-link" href="./Callforpapers.html">Call for papers</a></li>
-							<li class="nav-item"><a class="nav-link" href="importantdates.html">Important Dates &
-									Venue</a></li>
+							<li class="nav-item"><a class="nav-link" href="importantdates.html">Important Dates</a></li>
 							<li class="nav-item"><a class="nav-link" href="committees.html">Committees </a></li>
 							<li class="nav-item"><a class="nav-link" href="accommodation.html">Accommodation</a></li>
 							<li class="nav-item"><a class="nav-link" href="./schedule.html">Schedule</a></li>
@@ -83,9 +83,10 @@
 									<li class="nav-item"><a class="nav-link" href="Callforpapers.html">Papers</a></li>
 									<li class="nav-item"><a class="nav-link" href="register.html">Register</a></li>
 								</ul>
-                            </li>-->
-                            <li class="nav-item"><a class="nav-link" href="./speakers.html">Speakers</a></li>
+							</li>-->
+							<li class="nav-item"><a class="nav-link" href="./speakers.html">Speakers</a></li>
 							<li class="nav-item"><a class="nav-link" href="./register.html">Register</a></li>
+							<li class="nav-item"><a class="nav-link" href="#">Travel</a></li>
 							<li class="nav-item"><a class="nav-link" href="./contact.html">Contact Us</a></li>
 
 
@@ -101,10 +102,10 @@
 							<li class="nav-item"><a href="./register.html" class="tickets_btn">Register</a></li>
 						</ul> -->
 					</div>
-                </div>
-            </nav>
-        </div>
-    </header>
+				</div>
+			</nav>
+		</div>
+	</header>
     <!--================Header Menu Area =================-->
 
     <!--================Home Banner Area =================-->
@@ -180,7 +181,7 @@
     <!--================Contact Area =================-->
 
     <!--================ start footer Area  =================-->
-    <footer class="footer-area  pad_btm_50" height="auto">
+    <footer class="footer-area  pad_btm_50 footer-font" height="auto">
 		<div class="container">
 			<!--<div class="row" style="text-align: center; margin:auto;">
 				<div class="col-lg-1 col-md-2 col-sm-2"></div>
