--- a/about-us.html
+++ b/about-us.html
@@ -57,20 +57,20 @@
 					<!-- Collect the nav links, forms, and other content for toggling -->
 					<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
 						<ul class="nav navbar-nav menu_nav">
-							<li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+							<li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
 							<!-- <li class="nav-item"><a class="nav-link" href="about-us.html">About</a></li> -->
-							<li class="nav-item submenu dropdown">
+							<!--<li class="nav-item submenu dropdown">
 								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button"
 									aria-haspopup="true" aria-expanded="false">About</a>
 								<ul class="dropdown-menu">
 									<li class="nav-item"><a class="nav-link" href="about-us.html">College</a></li>
 									<li class="nav-item"><a class="nav-link" href="details.html">Event</a></li>
 								</ul>
-							</li>
+							</li>-->
+							<li class="nav-item"><a class="nav-link" href="about-us.html">About Us</a></li>
 							<!-- <li class="nav-item"><a class="nav-link" href="speakers.html">Speakers</a></li> -->
 							<li class="nav-item"><a class="nav-link" href="./Callforpapers.html">Call for papers</a></li>
-							<li class="nav-item"><a class="nav-link" href="importantdates.html">Important Dates &
-									Venue</a></li>
+							<li class="nav-item"><a class="nav-link" href="importantdates.html">Important Dates</a></li>
 							<li class="nav-item"><a class="nav-link" href="committees.html">Committees </a></li>
 							<li class="nav-item"><a class="nav-link" href="accommodation.html">Accommodation</a></li>
 							<li class="nav-item"><a class="nav-link" href="./schedule.html">Schedule</a></li>
@@ -86,6 +86,7 @@
 							</li>-->
 							<li class="nav-item"><a class="nav-link" href="./speakers.html">Speakers</a></li>
 							<li class="nav-item"><a class="nav-link" href="./register.html">Register</a></li>
+							<li class="nav-item"><a class="nav-link" href="#">Travel</a></li>
 							<li class="nav-item"><a class="nav-link" href="./contact.html">Contact Us</a></li>
 
 
@@ -175,7 +176,7 @@
 
 
 	<!--================ start footer Area  =================-->
-	<footer class="footer-area  pad_btm_50" height="auto">
+	<footer class="footer-area  pad_btm_50 footer-font" height="auto">
 		<div class="container">
 			<!--<div class="row" style="text-align: center; margin:auto;">
 				<div class="col-lg-1 col-md-2 col-sm-2"></div>
