--- a/index.html
+++ b/index.html
@@ -60,18 +60,18 @@
 						<ul class="nav navbar-nav menu_nav">
 							<li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
 							<!-- <li class="nav-item"><a class="nav-link" href="about-us.html">About</a></li> -->
-							<li class="nav-item submenu dropdown">
+							<!--<li class="nav-item submenu dropdown">
 								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button"
 									aria-haspopup="true" aria-expanded="false">About</a>
 								<ul class="dropdown-menu">
 									<li class="nav-item"><a class="nav-link" href="about-us.html">College</a></li>
 									<li class="nav-item"><a class="nav-link" href="details.html">Event</a></li>
 								</ul>
-							</li>
+							</li>-->
+							<li class="nav-item"><a class="nav-link" href="about-us.html">About Us</a></li>
 							<!-- <li class="nav-item"><a class="nav-link" href="speakers.html">Speakers</a></li> -->
 							<li class="nav-item"><a class="nav-link" href="./Callforpapers.html">Call for papers</a></li>
-							<li class="nav-item"><a class="nav-link" href="importantdates.html">Important Dates &
-									Venue</a></li>
+							<li class="nav-item"><a class="nav-link" href="importantdates.html">Important Dates</a></li>
 							<li class="nav-item"><a class="nav-link" href="committees.html">Committees </a></li>
 							<li class="nav-item"><a class="nav-link" href="accommodation.html">Accommodation</a></li>
 							<li class="nav-item"><a class="nav-link" href="./schedule.html">Schedule</a></li>
@@ -87,6 +87,7 @@
 							</li>-->
 							<li class="nav-item"><a class="nav-link" href="./speakers.html">Speakers</a></li>
 							<li class="nav-item"><a class="nav-link" href="./register.html">Register</a></li>
+							<li class="nav-item"><a class="nav-link" href="#">Travel</a></li>
 							<li class="nav-item"><a class="nav-link" href="./contact.html">Contact Us</a></li>
 
 
@@ -122,8 +123,8 @@
 							<img src="img/csi.jpg" style="width:20%; height:auto"/>
 						</div>
 					</div>
-					<h4>June 5,6 2020</h4>
-					<p>Organized by <h3 style="padding:0">Vasavi College of Engineering</h3>
+					<h4>5-6, June, 2020</h4>
+					<p>Organized by <h3 style="padding:0px;"><span style="margin-bottom: 20px;">Department of Computer Science Engineering</span> <br /><span style="margin-bottom:20px;">Vasavi College of Engineering (Autonomous) </span><br />Hyderabad, Telangana, India</h3>
 					</p>
 				</div>
 			</div>
@@ -176,12 +177,12 @@
 			<div class="welcome_inner row">
 				<div class="col-lg-5">
 					<div class="welcome_img">
-						<img class="img-fluid" src="img/banner/welcomeBanner.jpg" alt="">
+						<img class="img-fluid" src="img/banner/welcomeBanner.jpg" style="padding-top:30px;height:340px; width: auto;" alt="">
 					</div>
 				</div>
 				<div class="col-lg-6 offset-lg-1">
 					<div class="welcome_text">
-						<h3>Welcome</h3>
+						<h3>About SCI-2020</h3>
 						<p>
 							The aim of this 4th International Conference on Smart Computing & Informatics (SCI-2020)
 							is to present a unified platform for advanced and multi-disciplinary research
@@ -200,7 +201,7 @@
 	<!--================End Welcome Area =================-->
 
 	<!--================Team Area =================-->
-	<section class="team_area p_120" id="keyNoteSpeakers">
+	<!--<section class="team_area p_120" id="keyNoteSpeakers">
 		<div class="container">
 			<div class="main_title">
 				<h2>Meet Head Speakers</h2>
@@ -272,9 +273,9 @@
 						</div>
 					</div>
 				</div>
-			</div> -->
+			</div> - ->
 		</div>
-	</section>
+	</section>-->
 	<!--================End Team Area =================-->
 
 	<!--================Start Event Map Area =================-->
@@ -290,7 +291,7 @@
 	<!--================End Event Map Area =================-->
 
 	<!--================ start footer Area  =================-->
-	<footer class="footer-area  pad_btm_50" height="auto">
+	<footer class="footer-area  pad_btm_50 footer-font" height="auto">
 		<div class="container">
 			<!--<div class="row" style="text-align: center; margin:auto;">
 				<div class="col-lg-1 col-md-2 col-sm-2"></div>
